[gd_scene format=3 uid="uid://bvr536ueomc0d"]

[ext_resource type="Script" uid="uid://b83vy08k520s2" path="res://scenes/chat/chat.gd" id="1_dg5i7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dg5i7"]

[node name="Chat" type="PanelContainer" unique_id=1325120284]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dg5i7")
script = ExtResource("1_dg5i7")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1228582377]
layout_mode = 2

[node name="HeaderPanel" type="Panel" parent="VBoxContainer" unique_id=1281554512]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="VBoxContainer/HeaderPanel" unique_id=1682598446]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 16
text = "COMMUNICATIONS"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer" unique_id=638585082]
layout_mode = 2
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer" unique_id=1257908401]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 2
bbcode_enabled = true
text = "Hello,World!"
fit_content = true
scroll_active = false
selection_enabled = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer" unique_id=2048131015]
layout_mode = 2

[node name="ObjectivePanel" type="PanelContainer" parent="VBoxContainer" unique_id=1798328000]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ObjectivePanel" unique_id=809088893]
layout_mode = 2

[node name="ObjectiveLabel" type="Label" parent="VBoxContainer/ObjectivePanel/MarginContainer" unique_id=587186120]
layout_mode = 2

[node name="Timer" type="Timer" parent="." unique_id=892761131]
